--- a/suzytodos/app/src/main/AndroidManifest.xml
+++ b/suzytodos/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SuzyTodos">
-        <activity android:name=".todos"></activity>
+        <activity android:name=".tables" />
+        <activity android:name=".todos" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
